# order_processing

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
src/api/: orders.py  users.py
src/core/: config.py
src/crud/: base.py  orders.py  users.py
src/db/: db.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2025_11_22_1825-0cba474233ae_create_models.py
src/integrations/: base.py  exceptions.py  telegram_api.py
src/models/: models.py
src/processes/: notifications.py  orders.py
src/queue/: consumer.py  producer.py
src/schemas/: orders.py  users.py
src/tools/: dependencies.py  status_types.py
