[project]
name = "order-processing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "alembic>=1.17.2",
    "asyncio>=4.0.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.3",
    "loguru>=0.7.3",
    "orjson>=3.11.4",
    "pika>=1.3.2",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
